[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vv_ai"
version = "0.0.2"
authors = [
  { name="Sudeepa", email="mitsud40@gmail.com" },
]
description = "A  Nonensense AI package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
Homepage = "https://github.com/vv_ai"
Issues = "https://github.com/vv_ai/issues"